--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "application-name"
-  , "version": "0.0.1"
-  , "private": true
+    "name": "WithoutYou"
+  , "version": "0.1"
+  , "private": false
   , "dependencies": {
       "express": "2.5.2"
     , "jade": ">= 0.0.1"
